--- a/.github/workflows/veracode-code-analysis.yml
+++ b/.github/workflows/veracode-code-analysis.yml
@@ -9,10 +9,9 @@ concurrency:
 on:
   repository_dispatch:
     types: 
-      - java-maven-pipeline-scan
-      - java-maven-policy-scan
-      - java-gradle-pipeline-scan
-      - java-gradle-policy-scan
+      - java-pipeline-scan
+      - java-policy-scan
+      - java-sandbox-scan
       - source-code-pipeline-scan
       - source-code-policy-scan
       - dot-net-pipeline-scan
@@ -29,6 +28,9 @@ on:
       - scala-policy-scan
       - dart-pipeline-scan
       - dart-policy-sca
+      - unidentified-lang-pipeline-scan
+      - unidentified-lang-policy-scan
+      - unidentified-lang-sandbox-scan
 
 jobs:
   register:
