--- a/.github/workflows/veracode-sca-scan.yml
+++ b/.github/workflows/veracode-sca-scan.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run Veracode SCA
         env:
           SRCCLR_API_TOKEN: ${{ secrets.VERACODE_AGENT_TOKEN }}
-        uses: veracode/veracode-sca@v2.1.11
+        uses: veracode/veracode-sca@DXS-441
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           create-issues: false  
