--- a/.github/workflows/binary-ready-veracode-sast-sandbox-scan.yml
+++ b/.github/workflows/binary-ready-veracode-sast-sandbox-scan.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Veracode Upload and Scan Action Step
         id: upload_and_scan
-        uses: veracode/uploadandscan-action@v0.1.4
+        uses: veracode/uploadandscan-action@DXS-441
         with:
           appname: ${{ github.event.client_payload.user_config.profile_name }}
           createprofile: true
