--- a/.github/workflows/veracode-sandbox-scan.yml
+++ b/.github/workflows/veracode-sandbox-scan.yml
@@ -46,7 +46,7 @@ jobs:
 
       # run the policy scan action
       - name: Veracode Upload and Scan Action Step
-        uses: veracode/uploadandscan-action@v0.1.4
+        uses: veracode/uploadandscan-action@DXS-441
         id: upload_and_scan
         with:
           appname: ${{ github.event.client_payload.user_config.profile_name }}
